# monzo-beancount

./: .env.dev  .env.prod  .gitignore  404.html  Cargo.toml  Dockerfile  Dockerfile.beancount  Dockerfile.fava  README.md  docker-compose.yaml  google_accounts_copy.yaml  index.html  mkdocs.yml
commands/: index.html
configuration/: index.html  local.yaml  production.yaml
docs/: configuration.md  import.md  index.md
import/: index.html
installation/: index.html
search/: search_index.json
src/: configuration.rs  error.rs  errors.rs  main.rs
src/beancount/: account.rs  datafile_paths.rs  directive.rs  mod.rs  transaction.rs  user_settings.rs
src/beancount/generate/: classifier.rs  google_sheet_directives.rs  mod.rs  open_directives.rs
src/beancount/google/: config.rs  expense_accounts.rs  mod.rs  sheets.rs  transactions.rs
src/cli/: mod.rs
src/cli/command/: generate.rs  import_csv.rs  init.rs  mod.rs  server.rs  sheets.rs  update.rs
src/cli/command/process_csv/: mod.rs  pots.rs  savings.rs
src/google/: config.rs  expense_accounts.rs  mod.rs  sheets.rs  transactions.rs
