[package]
name = "beancount"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
google-sheets4 = "*"
hyper = "1.3.1"
hyper-rustls = "0.27.2"
rustls = "0.23.10"
rusty-money = "0.4.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
